examples/test/testpolicy1367.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1367
  namespace: namespace494
spec:
  podSelector:
    matchLabels:
      key40: value23
      key17: value28
      key18: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value26
      podSelector:
        matchLabels:
          key40: value9
